# shop

./: .gitignore  main.py  modelo.txt  pyproject.toml  rxt.txt  tienda.db
src/components/: custom_dialog.py  widget_categoria.py  widget_graph.py  widget_inventario.py  widget_marca.py  widget_size.py  widget_table.py  widget_venta.py
src/db/: model.py  service_inventario.py  service_ventas.py
