[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["diogenes69 <diogenes_monegro@claro.com.do>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
peewee = "^3.17.6"
pyside6 = "^6.7.2"
black = "^24.8.0"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.4.8"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
